--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -4,6 +4,7 @@
 
     <div class="header">
         <h1>Bring A Friend Diagram</h1>
+        <button mat-raised-button color="primary" (click)="export()">Export Diagram</button>
         <button mat-raised-button color="primary" (click)="showOverlay=!showOverlay">Add a New Friend!</button>
     </div>
 
