--- a/src/app/components/index/index.component.scss
+++ b/src/app/components/index/index.component.scss
@@ -2,6 +2,9 @@
     padding-top: 30px;
     .header {
         text-align: center;
+        button {
+            margin: 0 10px;
+        }
     }
     .overlay {
         position: fixed;
