--- a/src/app/components/line/line.component.scss
+++ b/src/app/components/line/line.component.scss
@@ -5,4 +5,8 @@ svg {
     z-index: 100;
     pointer-events: none;
     top: 0;
+    line {
+        stroke-width: 1;
+        stroke: red;
+    }
 }
