--- a/src/app/components/index/index.component.scss
+++ b/src/app/components/index/index.component.scss
@@ -7,6 +7,7 @@
         }
     }
     .overlay {
+        animation: fadeIn ease-in 0.5s;
         position: fixed;
         top: 3px;
         left: 3px;
@@ -14,5 +15,23 @@
         height: 99%;
         border: 3px solid red;
         border-style: dashed;
+        z-index: 999;
+        background-color: rgba(0, 0, 0, 0.32);
+        cursor: pointer;
+        .material-icons {
+            position: absolute;
+            right: 30px;
+            top: 30px;
+            font-size: 50px;
+        }
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
