--- a/src/app/components/line/line.component.html
+++ b/src/app/components/line/line.component.html
@@ -1,9 +1,10 @@
-<svg *ngIf="x1 && y1 && x2 && y2">
+<svg *ngIf="x1 && y1 && x2 && y2 && color">
     <line 
     class="line" 
     [attr.x1]="x1"
     [attr.y1]="y1"
     [attr.x2]="x2"
     [attr.y2]="y2"
+    [style.stroke]="color"
      />
 </svg>
