--- a/src/app/components/friend/friend.component.html
+++ b/src/app/components/friend/friend.component.html
@@ -12,13 +12,9 @@
     </div>
 
     <ng-container *ngIf="friend.children.length > 0">
-        <div *ngFor="let child of friend.children">
-            <app-line 
-            [x1]="friend.lineX"
-            [y1]="friend.lineY"
-            [x2]="child.lineX" 
-            [y2]="child.lineY"
-            [color]="friend.color">
+        <div class="line-container" *ngFor="let child of friend.children">
+            <app-line [x1]="friend.lineX" [y1]="friend.lineY" [x2]="child.lineX" [y2]="child.lineY"
+                [color]="friend.color">
             </app-line>
         </div>
     </ng-container>
