--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -13,8 +13,9 @@
         <button mat-raised-button color="primary" (click)="showOverlay=!showOverlay">Add A New Friend!</button>
     </div>
 
-    <div *ngFor="let item of items">
-        <app-friend [friend]="item" (idEmitter)="getSelectedId($event)"></app-friend>
+    <div class="friends-container">
+        <app-friend *ngFor="let item of items" [friend]="item" (idEmitter)="getSelectedId($event)">
+        </app-friend>
     </div>
 
 </div>
